@@ -1,3 +1,9 @@
+2003-08-20  Bruno Haible  <bruno@clisp.org>
+
+	* progname.h: New file, from GNU gettext with modifications.
+	* progname.c: New file, from GNU gettext with modifications.
+	* progreloc.c: New file.
+
 2003-08-19  Bruno Haible  <bruno@clisp.org>
 
 	* xstrdup.c: Assume <string.h> exists.
