@@ -1,3 +1,8 @@
+2003-08-20  Bruno Haible  <bruno@clisp.org>
+
+	* modules/progname: New file.
+	* MODULES.html.sh (func_all_modules): Add progname.
+
 2003-08-18  Paul Eggert  <eggert@twinsun.com>
 
 	* modules/stdbool: Add BUILT_SOURCES.  Prefer $@ to target name
